Consolidate partitionByLeaf into single ScoreDoc[] method